[package]
name = "sqlx4k_postgres"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
# https://crates.io/crates/once_cell
once_cell = { version = "1.21.3" }
# https://crates.io/crates/tokio
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
# https://crates.io/crates/sqlx
sqlx = { version = "0.8.6", features = [
    "runtime-tokio", # Use the tokio runtime without enabling a TLS backend.
    "postgres",      # Add support for the Postgres database server.
] }

[build-dependencies]
# https://crates.io/crates/cbindgen
cbindgen = "0.29.2"
