[package]
name = "sqlx4k"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
# https://crates.io/crates/sqlx
sqlx = { version = "0.8.6", features = [] }

[build-dependencies]
# https://crates.io/crates/cbindgen
cbindgen = "0.29.2"
